# rust-msi

./: .gitignore  Cargo.toml  Test.wxs  WIXL.wxs  create_dup.bash  diff_msi.bash  duplicate.bash
examples/: comparitor.rs  dump_cfb_streams.rs  duplicate.rs  mre.rs  msiinfo.rs  msiquery.rs
src/: lib.rs
src/internal/: category.rs  codepage.rs  column.rs  package.rs  propset.rs  query.rs  streamname.rs  stringpool.rs  summary.rs  table.rs  value.rs
tests/: delete.rs  select.rs  signature.rs  streams.rs  summary.rs  tables.rs  validation.rs
