[workspace]
members = [".", "ffi"]
default-members = [".", "ffi"]

[workspace.package]
version = "0.9.0"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
repository = "https://github.com/mdsteele/rust-msi"
keywords = ["msi", "windows", "installer", "package"]
license = "MIT"
readme = "README.md"
edition = "2024"

[package]
name = "msi"
version.workspace = true
authors.workspace = true
description = "Read/write Windows Installer (MSI) files"
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
byteorder = "1"
cfb = "0.11"
encoding_rs = "0.8"
uuid = "1"
darling = "0.21.3"
strum = { version = "0.27.2", features = ["derive"] }
quote = "1.0.41"
proc-macro2 = "1.0.101"
itertools = "0.14.0"

[dev-dependencies]
anyhow = "1.0.100"
assert2 = "0.3.16"
clap = { version = "4.5", features = ["derive"] }
itertools = "0.14.0"
pest = "2.1"
pest_derive = "2.1"
similar = "2.7.0"
time = "0.3"
